--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.17",
+    "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@mui/system": "^5.14.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
+    "stylis": "^4.3.0",
+    "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
